Interface gráfica e aplicação de fonte